<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@id/guideline1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/editor_fab"
                android:layout_width="@dimen/fab_height"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/editor_image_view"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/editor"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:icon="@drawable/ic_editor"
                app:iconTint="@color/editor_icon_color" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/camera_fab"
                android:layout_width="@dimen/fab_height"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/editor_image_view"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:icon="@drawable/ic_camera"
                app:iconTint="@color/camera_icon_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/studio_fab"

                android:layout_width="@dimen/fab_height"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/editor_image_view"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/studio"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:icon="@drawable/ic_studio"
                app:iconTint="@color/studio_icon_color" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/trim_fab"
                android:layout_width="@dimen/fab_height"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/editor_image_view"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/trim"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:icon="@drawable/ic_trim"
                app:iconTint="@color/trim_icon_color" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/material_fab"
                android:layout_width="@dimen/fab_height"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/editor_image_view"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/material"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:icon="@drawable/ic_material"
                app:iconTint="@color/material_icon_color" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/had_to_decide_fab"
                android:layout_width="@dimen/fab_height"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/editor_image_view"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/decide"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:icon="@drawable/ic_decide"
                app:iconTint="@color/vip_icon_color" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>